# hotel_matching

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  compare_images.py  main.py  matcher.py  package-lock.json  pyproject.toml  sample_clip_matching.py  sample_feature_matching.py  scraper.py  separate_url.txt
apps/: __init__.py  web.py
hotel_matching/: __init__.py  matcher.py
hotel_matching/matchers/: __init__.py  clip_matcher.py  feature_matcher.py  gemini_matcher.py  hash_matcher.py  phash_matcher.py  registry.py
hotel_matching/scraper/: __init__.py
samples/: average_hash.py  clip_matching.py  feature_matching.py  gemini_matching.py  phash_matching.py  skygate_scraping.py
static/css/: style.css
static/js/: main.js
templates/: index.html
